worked on the home page and added the products and contact us pages

--- a/html/Index.html
+++ b/html/Index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <link rel="stylesheet" href="../css/index.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tharuka Apparel</title>
+  </head>
+  <body>
+    <div id="main">
+      <header>
+        <div id="navlabel">
+          <img src="../assests/label.jpg" alt="label" />
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div id="slideshow">
+        <div id="slideshow-image">
+          <img src="../assests/slideshow.jpg" alt="label" />
+        </div>
+        <div id="intro-wrapper">
+          <div id="intro-heading">
+            <h1>
+              Welcome to <br />
+              <span class="more-highlight">Tharuka Apparel</span>
+            </h1>
+          </div>
+          <div id="intro-para">
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos a
+              autem, deleniti fugit, nesciunt laudantium impedit esse modi
+              molestias ab asperiores nulla doloremque eveniet dicta temporibus
+              harum hic aut soluta?
+            </p>
+          </div>
+        </div>
+      </div>
+      <div id="testimonial">
+        <h1>
+          HOW OTHERS THINK <br /><span class="more-highlight">ABOUT US</span>
+        </h1>
+        <div id="testimonials-container">
+          <button></button>
+          <div id="testimonial-1">
+            <p>hellllllllo</p>
+          </div>
+          <div id="testimonial-2">
+            <p>helenw</p>
+          </div>
+          <div id="testimonial-3">
+            <p>hakaiiai</p>
+          </div>
+          <div id="testimonial-4">
+            <p>iweiaahdid</p>
+          </div>
+          <button></button>
+        </div>
+      </div>
+      <div id="purchasing"></div>
+      <div id="footer"></div>
+      <footer></footer>
+    </div>
+  </body>
 </html>
