added the contact us page and further changes on the other pages

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/contactus.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
@@ -19,5 +20,83 @@
         </ul>
       </nav>
     </header>
+    <div>
+      <div id="main-content">
+        <h1 class="main-topic">Contact <span>Us</span></h1>
+        <div class="main-fieldset">
+          <div class="image-container">
+            <img src="../assests/contact-us.jpg" alt="contact us image" />
+          </div>
+          <div id="contact-us-description">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              nobis doloribus voluptatem maxime voluptatum dicta, debitis earum
+              quidem temporibus pariatur aut odio saepe aspernatur quia?
+              Sapiente tempore saepe totam at? Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Quae excepturi quisquam ab deserunt
+              magni sequi aliquam quis molestias, omnis facilis sit, possimus
+              consequuntur dolorem ea rerum beatae ipsa nobis iure!
+            </p>
+          </div>
+        </div>
+
+        <div id="contact-us">
+          <div class="contact-item">
+            <h2>Write to Us</h2>
+            <p>Email:</p>
+            <a href="mailto:thenukagurusinghe0@gmail.com">
+              thenukagurusinghe0@gmail.com
+            </a>
+          </div>
+          <div class="contact-item">
+            <h2>Call Us</h2>
+            <p>Telephone:</p>
+            <a href="tel:+94756548744">+94 756548744</a>
+          </div>
+          <div class="contact-item">
+            <h2>Visit Us</h2>
+            <p>Address:</p>
+            <p>No. 130/1, Bothota, Medawala, Kandy, Sri Lanka</p>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div id="footer">
+          <div class="footer-container" id="site-navigation">
+            <h3>Site Navigation</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="social-media">
+            <h3>Follow Us</h3>
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">YouTube</a></li>
+              <li><a href="#">TikTok</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="contact-us">
+            <h3>Contact Us</h3>
+            <ul>
+              <li>
+                Email:
+                <a href="mailto:thenukagurusinghe0@gmail.com"
+                  >thenukagurusinghe0@gmail.com</a
+                >
+              </li>
+              <li>Tel: <a href="tel:+94756548744">+94 756548744</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="visit-us">
+            <h3>Visit Us</h3>
+            <p>No. 130/1, Bothota, Medawala, Kandy, Sri Lanka</p>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
