--- a/html/products.html
+++ b/html/products.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/products.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
@@ -19,5 +20,73 @@
         </ul>
       </nav>
     </header>
+    <div id="main-container">
+      <fieldset class="tshirt-fieldset">
+        <legend>T-Shirts</legend>
+        <div id="tshirt-container">
+          <div id="cooperate">
+            <h2>Cooperate T-Shirts</h2>
+            <div id="cooperate-sub"></div>
+          </div>
+          <div id="sportswear">
+            <h2>Sportswear T-Shirts</h2>
+            <div id="sportswear-sub"></div>
+          </div>
+          <div id="daily">
+            <h2>Daily T-Shirts</h2>
+            <div id="daily-sub"></div>
+          </div>
+        </div>
+      </fieldset>
+      <fieldset class="bottom-fieldset">
+        <legend>Bottom</legend>
+      </fieldset>
+      <fieldset class="shorts-fieldset">
+        <legend>Shorts</legend>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil minus
+          eius suscipit sequi, aspernatur assumenda illo ipsum alias maiores
+          maxime, nobis, laboriosam recusandae unde nulla delectus. Impedit
+          voluptates dolore inventore.
+        </p>
+      </fieldset>
+    </div>
+    <footer>
+      <div id="footer">
+        <div class="footer-container" id="site-navigation">
+          <h3>Site Navigation</h3>
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-container" id="social-media">
+          <h3>Follow Us</h3>
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">TikTok</a></li>
+          </ul>
+        </div>
+        <div class="footer-container" id="contact-us">
+          <h3>Contact Us</h3>
+          <ul>
+            <li>
+              Email:
+              <a href="mailto:thenukagurusinghe0@gmail.com"
+                >thenukagurusinghe0@gmail.com</a
+              >
+            </li>
+            <li>Tel: <a href="tel:+94756548744">+94 756548744</a></li>
+          </ul>
+        </div>
+        <div class="footer-container" id="visit-us">
+          <h3>Visit Us</h3>
+          <p>No. 130/1, Bothota, Medawala, Kandy, Sri Lanka</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
