--- a/html/Index.html
+++ b/html/Index.html
@@ -2,6 +2,18 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tharuka Apparel</title>
@@ -27,7 +39,7 @@
         </div>
         <div id="intro-wrapper">
           <div id="intro-heading">
-            <h1>
+            <h1 class="heading-h1">
               Welcome to <br />
               <span class="more-highlight">Tharuka Apparel</span>
             </h1>
@@ -42,12 +54,45 @@
           </div>
         </div>
       </div>
+      <div id="purchasing">
+        <div id="no-of-pieces">
+          <div class="purchasing-items-1">
+            <span class="purchasing-items-2">25325</span><br />
+            <span class="purchasing-items-3">Pieces</span> <br />
+            <span class="purchasing-items-4">
+              have been <br />
+              manufactured and delivered.
+            </span>
+          </div>
+        </div>
+        <div id="no-of-orders">
+          <div class="purchasing-items-1">
+            <span class="purchasing-items-2">237</span><br />
+            <span class="purchasing-items-3">Orders</span> <br />
+            <span class="purchasing-items-4-1">
+              have been <br />
+              completed successfully.
+            </span>
+          </div>
+        </div>
+        <div id="no-of-years">
+          <div class="purchasing-items-1">
+            <span class="purchasing-items-2">17+</span><br />
+            <span class="purchasing-items-3">Years</span> <br />
+            <span class="purchasing-items-4-2">
+              of <br />
+              working.
+            </span>
+          </div>
+        </div>
+      </div>
       <div id="testimonial">
-        <h1>
+        <h1 class="heading-h1">
           HOW OTHERS THINK <br /><span class="more-highlight">ABOUT US</span>
         </h1>
         <div id="testimonials-container">
-          <button></button>
+          <button class="btn prev"><i class="fas fa-arrow-left"></i></button>
+
           <div id="testimonial-1">
             <p>hellllllllo</p>
           </div>
@@ -60,12 +105,58 @@
           <div id="testimonial-4">
             <p>iweiaahdid</p>
           </div>
-          <button></button>
+          <button class="btn next"><i class="fas fa-arrow-right"></i></button>
         </div>
       </div>
-      <div id="purchasing"></div>
-      <div id="footer"></div>
-      <footer></footer>
+      <div id="our-clients">
+        <h1 class="heading-h1">Our <span class="more-highlight">Clients</span> </h1>
+        <div id="client-container">
+          <div id="client-1"><p>Hello</p></div>
+          <div id="client-2"><p>Hello</p></div>
+          <div id="client-3"><p>Hello</p></div>
+          <div id="client-4"><p>Hello</p></div>
+          <div id="client-5"><p>Hello</p></div>
+          <div id="client-6"><p>Hello</p></div>
+          
+        </div>
+      </div>
+      <footer>
+        <div id="footer">
+          <div class="footer-container" id="site-navigation">
+            <h3>Site Navigation</h3>
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="social-media">
+            <h3>Follow Us</h3>
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">YouTube</a></li>
+              <li><a href="#">TikTok</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="contact-us">
+            <h3>Contact Us</h3>
+            <ul>
+              <li>
+                Email:
+                <a href="mailto:thenukagurusinghe0@gmail.com"
+                  >thenukagurusinghe0@gmail.com</a
+                >
+              </li>
+              <li>Tel: <a href="tel:+94756548744">+94 756548744</a></li>
+            </ul>
+          </div>
+          <div class="footer-container" id="visit-us">
+            <h3>Visit Us</h3>
+            <p>No. 130/1, Bothota, Medawala, Kandy, Sri Lanka</p>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
