created the cooperate page.

--- a/html/products.html
+++ b/html/products.html
@@ -22,7 +22,7 @@
     </header>
     <div id="main-container">
       <fieldset class="tshirt-fieldset">
-        <legend>T-Shirts</legend>
+        <legend>T- <span class="heading">Shirts</span></legend>
         <div id="tshirt-container">
           <div id="cooperate">
             <h2>Cooperate T-Shirts</h2>
@@ -32,23 +32,24 @@
             <h2>Sportswear T-Shirts</h2>
             <div id="sportswear-sub"></div>
           </div>
-          <div id="daily">
-            <h2>Daily T-Shirts</h2>
-            <div id="daily-sub"></div>
+          <div id="kids">
+            <h2>Kids T-Shirts</h2>
+            <div id="kids-sub"></div>
           </div>
         </div>
       </fieldset>
       <fieldset class="bottom-fieldset">
-        <legend>Bottom</legend>
-      </fieldset>
-      <fieldset class="shorts-fieldset">
-        <legend>Shorts</legend>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil minus
-          eius suscipit sequi, aspernatur assumenda illo ipsum alias maiores
-          maxime, nobis, laboriosam recusandae unde nulla delectus. Impedit
-          voluptates dolore inventore.
-        </p>
+        <legend>Bottoms and Shorts</legend>
+        <div id="bottoms-shorts-container">
+          <div id="bottoms">
+            <h2>Bottoms</h2>
+            <div id="bottoms-sub"></div>
+          </div>
+          <div id="shorts">
+            <h2>Shorts</h2>
+            <div id="shorts-sub"></div>
+          </div>
+        </div>
       </fieldset>
     </div>
     <footer>
