--- a/html/Index.html
+++ b/html/Index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic"
       rel="stylesheet"
     />
+    <script defer src="../javascript/index.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tharuka Apparel</title>
@@ -87,29 +88,41 @@
         </div>
       </div>
       <div id="testimonial">
-        <h1 class="heading-h1">
+        <h1 class="heading-h1-1">
           HOW OTHERS THINK <br /><span class="more-highlight">ABOUT US</span>
         </h1>
         <div id="testimonials-container">
-          <button class="btn prev"><i class="fas fa-arrow-left"></i></button>
+          <button class="btn prev" disabled>
+            <i class="fas fa-arrow-left"></i>
+          </button>
 
-          <div id="testimonial-1">
+          <div class="testimonial" id="testimonial-1">
             <p>hellllllllo</p>
           </div>
-          <div id="testimonial-2">
+          <div class="testimonial" id="testimonial-2">
             <p>helenw</p>
           </div>
-          <div id="testimonial-3">
+          <div class="testimonial" id="testimonial-3">
             <p>hakaiiai</p>
           </div>
-          <div id="testimonial-4">
+          <div class="testimonial" id="testimonial-4">
             <p>iweiaahdid</p>
           </div>
+          <div class="testimonial" id="testimonial-5" style="display: none">
+            <p>new testimonial 5</p>
+          </div>
+          <div class="testimonial" id="testimonial-6" style="display: none">
+            <p>new testimonial 6</p>
+          </div>
+
           <button class="btn next"><i class="fas fa-arrow-right"></i></button>
         </div>
       </div>
+
       <div id="our-clients">
-        <h1 class="heading-h1">Our <span class="more-highlight">Clients</span> </h1>
+        <h1 class="heading-h1-1">
+          Our <span class="more-highlight">Clients</span>
+        </h1>
         <div id="client-container">
           <div id="client-1"><p>Hello</p></div>
           <div id="client-2"><p>Hello</p></div>
@@ -117,7 +130,6 @@
           <div id="client-4"><p>Hello</p></div>
           <div id="client-5"><p>Hello</p></div>
           <div id="client-6"><p>Hello</p></div>
-          
         </div>
       </div>
       <footer>
